--- a/player/templates/player/overview.html
+++ b/player/templates/player/overview.html
@@ -133,7 +133,7 @@
             {% endif %}
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3">
-            {% skills player True %}
+            {% skills player %}
         </div>
     </div>
 </div>
