--- a/player/templates/player/redesign/overview.html
+++ b/player/templates/player/redesign/overview.html
@@ -511,7 +511,7 @@
         <ul class="overview__stickers-tabs">
           {% for pack_id in stickers_header_dict|get_key_list %}
           <li>
-            <button class="overview__stickers-tab active">
+            <button class="overview__stickers-tab {% if forloop.counter0 == 0 %}active{% endif %}">
               <img src="{{ header_img_dict|dict_key:pack_id }}" alt="{{ stickers_header_dict|dict_key:pack_id }}">
               <span>{{ stickers_header_dict|dict_key:pack_id }}</span>
             </button>
